UF-14939: Changes after review feedback
