# src/test/resources/api/openapi.yaml
@@ -7,7 +7,7 @@ info:
     url: https://opensource.org/licenses/MIT
   version: "1.0"
 servers:
-  - url: http://localhost:54642
+  - url: http://localhost:56369
     description: Generated server url
 tags:
   - name: Configuration for instances
@@ -324,20 +324,23 @@ paths:
           schema:
             type: string
           example: 123
-        - name: fromDate
+        - name: fromDateTime
           in: query
-          description: The start date for filtering web messages (optional)
+          description: The start date and time for filtering web messages (optional)
           required: false
           schema:
             type: string
-          example: 2023-02-23 17:26:23
-        - name: toDate
+            format: date-time
+          example: 2023-02-23T17:26:23.000+01:00
+        - name: toDateTime
           in: query
-          description: The end date for filtering web messages (optional)
+          description: "The end date and time for filtering web messages (optional).\
+          \ Format: yyyy-MM-dd'T'HH:mm:ss.SSSXXX"
           required: false
           schema:
             type: string
-          example: 2023-02-23 17:26:23
+            format: date-time
+          example: 2023-02-23T17:26:23.000+01:00
       responses:
         "200":
           description: Successful operation
@@ -418,6 +421,12 @@ components:
     Problem:
       type: object
       properties:
+        status:
+          $ref: "#/components/schemas/StatusType"
+        title:
+          type: string
+        detail:
+          type: string
         instance:
           type: string
           format: uri
@@ -428,20 +437,14 @@ components:
           type: object
           additionalProperties:
             type: object
-        status:
-          $ref: "#/components/schemas/StatusType"
-        title:
-          type: string
-        detail:
-          type: string
     StatusType:
       type: object
       properties:
+        reasonPhrase:
+          type: string
         statusCode:
           type: integer
           format: int32
-        reasonPhrase:
-          type: string
     ConstraintViolationProblem:
       type: object
       properties:
@@ -482,6 +485,8 @@ components:
           type: string
         message:
           type: string
+        detail:
+          type: string
         instance:
           type: string
           format: uri
@@ -489,8 +494,6 @@ components:
           type: object
           additionalProperties:
             type: object
-        detail:
-          type: string
         suppressed:
           type: array
           items:
@@ -553,6 +556,12 @@ components:
                 type: boolean
         message:
           type: string
+        status:
+          $ref: "#/components/schemas/StatusType"
+        title:
+          type: string
+        detail:
+          type: string
         instance:
           type: string
           format: uri
@@ -563,12 +572,6 @@ components:
           type: object
           additionalProperties:
             type: object
-        status:
-          $ref: "#/components/schemas/StatusType"
-        title:
-          type: string
-        detail:
-          type: string
         suppressed:
           type: array
           items:
